--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,23 @@ body{
     background-color: rgba(147, 213, 252, 0.795);
 }
 
+}
+.navbar-brand > img {
+  display: block;
+}
+
+img {
+    border: 0;
+}
+img {
+    vertical-align: middle;
+}
+
+img {
+    height: 20px;
+    width: 20px;
+}
+
 div {
     margin: 1rem 0;
 }
