--- a/style/style.css
+++ b/style/style.css
@@ -7,12 +7,23 @@ body{
   display: block;
 }
 
-img {
-    border: 2;
-    vertical-align: middle;
-    height: auto;
-    width: 10%;
+.brandnav {
+    width: 22%;
 }
+
+#myProgress {
+    width: 100%;
+    background-color: #ddd;
+  }
+  
+  #myBar {
+    width: 10%;
+    height: 30px;
+    background-color: #4CAF50;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+  }
 
 div {
     margin: 1rem 0;
